Aggiornamento swagger
