# be/filemanagement/src/main/java/com/filemanagement/controller/CartelleController.java
@@ -8,6 +8,7 @@ import com.filemanagement.service.CartelleService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
@@ -18,6 +19,8 @@ import org.springframework.web.bind.annotation.*;
 @RestController
 @RequestMapping("/cartelle")
 @Validated
+@Tag(name = "Cartelle Controller",
+        description = "Gestione delle cartelle")
 public class CartelleController {
 
     @Autowired
