# fe/load-files/src/openapicode/filemanagement/model/generic-response-dto-string.ts
@@ -1,11 +1,11 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * OpenAPI definition
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ * MS File Management
+ * Microservizio dedicato alla gestione dei documenti e delle cartelle per l\'addestramento dei bot
  *
- * The version of the OpenAPI document: v0
- * 
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: f.calo29@studenti.uniba.it
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
