# fe/load-files/src/openapicode/filemanagement/model/index.ts
@@ -1,4 +1,8 @@
+export * from './cartella-params';
+export * from './elimina-documento';
 export * from './esito';
 export * from './generic-response-dto-string';
 export * from './messaggio';
+export * from './modifica-cartella-params';
+export * from './modifica-documenti-params';
 export * from './parametro';
