# fe/load-files/src/openapicode/filemanagement/model/modifica-cartella-params.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * MS File Management
+ * Microservizio dedicato alla gestione dei documenti e delle cartelle per l\'addestramento dei bot
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: f.calo29@studenti.uniba.it
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * ModificaCartellaParams
+ * @export
+ * @interface ModificaCartellaParams
+ */
+export interface ModificaCartellaParams {
+    /**
+     * Nuovo path della cartella
+     * @type {string}
+     * @memberof ModificaCartellaParams
+     */
+    'nuovoPath'?: string;
+    /**
+     * Nuovo nome della cartella
+     * @type {string}
+     * @memberof ModificaCartellaParams
+     */
+    'nuovoNomeCartella'?: string;
+    /**
+     * Nome della cartella
+     * @type {string}
+     * @memberof ModificaCartellaParams
+     */
+    'nomeCartella'?: string;
+    /**
+     * Path delle cartella
+     * @type {string}
+     * @memberof ModificaCartellaParams
+     */
+    'path'?: string;
+}
+
